--- a/src/components/Inspiration/styles.css
+++ b/src/components/Inspiration/styles.css
@@ -26,7 +26,7 @@
 
 #inspiration .inspiration-cards .card .card-content {
   margin-bottom: 10px;
-  font-size: 1.1rem;
+  font-size: 1.rem;
 }
 
 #inspiration .inspiration-cards .card .card-citation {
