--- a/src/components/Inspiration/styles.css
+++ b/src/components/Inspiration/styles.css
@@ -1,6 +1,6 @@
 #inspiration {
-  max-width: 800px;
-  margin: 40px auto 0;
+  max-width: 1000px;
+  margin: 15px auto 0;
 }
 
 #inspiration h2 {
@@ -16,8 +16,8 @@
 }
 
 #inspiration .inspiration-cards .card {
-  height: auto;
-  max-width: 70%;
+  height: 60px;
+  max-width: 50%;
   padding: 20px;
   background-color: #203047;
   border-radius: 10px;
