--- a/src/components/Inspiration/styles.css
+++ b/src/components/Inspiration/styles.css
@@ -16,8 +16,8 @@
 }
 
 #inspiration .inspiration-cards .card {
-  height: 60px;
-  max-width: 50%;
+  height: auto;
+  max-width: auto;
   padding: 20px;
   background-color: #203047;
   border-radius: 10px;
