--- a/src/components/Inspiration/styles.css
+++ b/src/components/Inspiration/styles.css
@@ -1,34 +1,44 @@
+
 #inspiration {
-  max-width: 1000px;
-  margin: 15px 15px 15px;
+  max-width: 40px;
+
 }
 
 #inspiration h2 {
   font-weight: 500;
+  margin-top: 20px;
+  margin-left: 850px;
+  display:inline-block ;
+
 }
 
 #inspiration .inspiration-cards {
-  margin-top: 20px;
-
-  display: flex;
+  margin-top: 10px;
+  margin-left: 350px;
+  
+  display: inline-block;
   align-items: center;
   justify-content: space-between;
 }
 
 #inspiration .inspiration-cards .card {
   height: auto;
-  max-width: auto;
-  padding: 20px;
+  max-width: 950px;
+  padding: 3px;
   background-color: #203047;
   border-radius: 10px;
   color: #fff;
 }
 
 #inspiration .inspiration-cards .card .card-content {
-  margin-bottom: 10px;
+  margin-bottom: 1px;
   font-size: 1.rem;
+  padding: 3px;
+  text-align: center;
 }
 
 #inspiration .inspiration-cards .card .card-citation {
   font-size: 0.9rem;
+  margin-left: 800px;
+
 }
