--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,6 +1,6 @@
 #tarefas {
-  max-width: 400px;
-  margin: 10px 10px 10px;
+  max-width: 800px;
+  margin: 10px 400px 10px;
 }
 
 #tarefas h2 {
@@ -20,6 +20,7 @@
   padding: 0 8px;
   margin-right: 20px;
   border-radius: 4px;
+  border-color: aqua;
   font-family: "Poppins", sans-serif;
 }
 
